--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint src test",
-    "prepublish": "npm run clean && npm run lint && npm run test && npm run build",
-    "start": "node index.js"
+    "lint": "",
+    "prepublish": ""
   },
   "dependencies": {
     "pinyin": "^2.8.3",
