--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prettier": "prettier --single-quote --use-tabs --write .\\**\\*.js",
+    "prettier": "prettier --single-quote --use-tabs --write ./*.js",
     "lint": "",
     "prepublish": ""
   },
