some clean up with prettier and eslint

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prettier": "prettier --single-quote --use-tabs --write ./*.js",
-    "lint": "",
+    "prettier": "prettier --single-quote --trailing-comma --use-tabs --write ./*.js",
+    "lint": ".\\node_modules\\.bin\\eslint.cmd",
     "prepublish": ""
   },
   "dependencies": {
