--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prettier": "prettier --single-quote --trailing-comma=all --use-tabs --write ./*.js",
+    "test": "mocha",
+    "prettier": "prettier --single-quote --trailing-comma=all --use-tabs --write ./**/*.js",
     "lint": ".\\node_modules\\.bin\\eslint.cmd",
     "prepublish": ""
   },
@@ -28,6 +28,8 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0"
+    "eslint-plugin-standard": "^4.0.0",
+    "mocha": "^5.2.0",
+    "rewire": "^4.0.1"
   }
 }
