--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rhyme-machine",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "to help rappers have a easier rhyme life",
   "repository": {
     "type": "git",
@@ -14,7 +14,7 @@
     "test": "mocha",
     "prettier": "prettier --single-quote --trailing-comma=all --use-tabs --write ./**/*.js",
     "lint": ".\\node_modules\\.bin\\eslint.cmd",
-    "prepublish": ""
+    "prepublish": "yarn test"
   },
   "dependencies": {
     "axios": "^0.18.0",
