--- a/package.json
+++ b/package.json
@@ -16,23 +16,25 @@
     "lint": "./node_modules/.bin/eslint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "lodash": "^4.17.11",
+    "axios": "^0.18.1",
+    "lodash": "^4.17.15",
     "pinyin": "^2.8.3",
     "request": "^2.88.0"
   },
   "devDependencies": {
     "eslint": "^5.10.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "standard": "^12.0.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "mocha": "^5.2.0",
-    "rewire": "^4.0.1"
+    "rewire": "^4.0.1",
+    "standard": "^12.0.1"
   },
   "standard": {
-    "envs": ["mocha"]
+    "envs": [
+      "mocha"
+    ]
   }
 }
