--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "node index.js",
     "test": "mocha",
     "prettier": "prettier --single-quote --trailing-comma=all --use-tabs --write ./**/*.js",
-    "lint": "./node_modules/.bin/eslint"
+    "lint": "eslint . --ext js"
   },
   "dependencies": {
     "axios": "^0.18.1",
@@ -22,7 +22,8 @@
     "request": "^2.88.0"
   },
   "devDependencies": {
-    "eslint": "^5.10.0",
+    "eslint": "^6.3.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^8.0.0",
