--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npx babel index.js",
-    "build": "rm -rf lib && babel src -d lib",
-    "exec": "npm run build && node lib/index.js",
+    "buildData": "npx babel-node dict/dataProcessor.js > ./dict/data.post.json",
+    "processData": "npx babel-node dict/dataProcessor.js",
     "clean": "rm -rf lib",
     "test": "mocha",
     "lint": "eslint . --ext js"
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.10.5",
+    "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
     "babel-plugin-root-import": "^6.5.0",
     "eslint": "^6.3.0",
