--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "start": "npx babel index.js",
-    "buildData": "npx babel-node dict/dataProcessor.js > ./dict/data.post.json",
-    "processData": "npx babel-node dict/dataProcessor.js",
-    "clean": "rm -rf lib",
+    "build": "npx babel-node dict/dataProcessor.js && node dict/pipeline.js",
     "test": "mocha",
     "lint": "eslint . --ext js"
   },
   "dependencies": {
+    "aws-sdk": "^2.715.0",
     "axios": "^0.18.1",
     "lodash": "^4.17.15",
     "pinyin": "^2.8.3",
